
    if (uc($host_view->get_property('runtime.inMaintenanceMode')) eq "TRUE")

    This is quite stupid. runtime.inMaintenanceMode is xsd:boolean wich means true or false (in 
    lower cas letters. So a uc() make no sense. Removed

  - Bypass SSL certificate validation - thanks Robert Karliczek for the hint
  - Added --sslport if any port other port than 443 is wanted. 443 is used as default.
  - Rewritten authorization part. Sessionfiles are working now.
  - Updated README.

- 03 Dec 2013 M.Fuerstenau version 0.8.14
  - host_runtime_info()
    - Fixed minor bug. In case of an unknown with sensors the unknown was always mapped to
      a warning. This wasn't sensefull under all circumstances. Now it is only mapped to warning
      if --ignoreunknow is not set.
  - README
    - Updated installation notes
  - Optional pathname for sessionfile

- 10 Dec 2013 M.Fuerstenau version 0.8.15
  - datastore_volumes_info()
    - Changed "For all volumes" to "For all selected volumes". This should fit all. The subroutine datastore_volumes_info
      is called from several subroutines and to make a difference here for a single volume or more volumes will cause
      a lot of unnecessary work just for cosmetics.
    - Fixed typo in error message.
    - Modified error messages
  - Removed plausibility check whether critical must be greater than warning. In case of freespace for example it must
    be the other way round. The plausibility check was nice but too complicated for all the different conditions.
  - check_against_threshold() - Cleaned up and partially rewritten.

- 12 Dec 2013 M.Fuerstenau version 0.8.16
  - datastore_volumes_info()
    - Some small fixes
      - Changed the output for OK from  "For all selected volumes" to "OK for all seleted volumes."
      -  Same for error plus an error counter for the alarms
  - Main selection - GetOptions. Unce upon a time I had kicked out $timeout unintended. Fixed now. Thanks to 
    Andreas Daubner for the hint.